2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-keybinding-properties.c: (setup_dialog):
	* keybinding.desktop.in.in: update icon name to use what
	gnome-icon-theme uses (bug #539338)

2008-06-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (create_dialog), (accel_set_func),
	(description_set_func), (keybinding_key_changed),
	(keybinding_description_changed), (clear_old_model),
	(append_keys_to_tree), (parse_start_tag),
	(append_keys_to_tree_from_file), (append_keys_to_tree_from_gconf),
	(cb_check_for_uniqueness), (accel_edited_callback),
	(accel_cleared_callback), (description_edited_callback),
	(real_start_editing_cb), (start_editing_cb), (setup_dialog):
	make editing the shortcut action work for custom bindings

2008-05-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (append_keys_to_tree),
	(parse_start_tag), (append_keys_to_tree_from_file),
	(append_keys_to_tree_from_gconf), (reload_key_entries): add
	initial support for editing custom shortcuts (bug #114796).
	Adding/deleting shortcuts is not yet possible

2008-05-29  William Jon McCann  <jmccann@redhat.com>

	* eggcellrendererkeys.c (egg_cell_renderer_keys_class_init):
	Don't use deprecated GTK+ symbol.

==================== 2.23.2 ====================

2008-04-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (get_real_model), (clear_old_model),
	(append_keys_to_tree), (accel_edited_callback): get rid of unneeded
	sort model indirection

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* eggcellrendererkeys.c (grab_key_callback): Fix Esc and Backspace
	being bindable when Caps Lock is on (Closes: #524813)

2008-03-31  Bastien Nocera  <hadess@hadess.net>

        * gnome-keybinding-properties.c (append_keys_to_tree_from_file):
	Fix category headers not appearing properly in the
	treeview when using a non-UTF-8 locale (Closes: #513988)

2008-03-29  Jens Granseuer  <jensgr@gmx.net>
